feat: Added new end point and test for it
